--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,19 @@
     <meta
       key="desc"
       name="keywords"
-      content="website, blog, portfolio, Daniel Jebarson"
+      content="website, blog, portfolio, Nitish Yadav"
     />
     <meta property="og:title" content="Portfolio" />
     <meta
       property="og:description"
-      content="This is the portfolio website of Daniel Jebarson K done with React and TailwindCSS"
+      content="This is the portfolio website of Nitish Yadav done with React and TailwindCSS"
     />
-    <meta name="author" content="Daniel Jebarson" />
-    <meta name="publisher" content="Daniel Jebarson" />
-    <meta name="copyright" content="Daniel Jebarson" />
+    <meta name="author" content="Nitish Yadav" />
+    <meta name="publisher" content="Nitish Yadav" />
+    <meta name="copyright" content="Nitish Yadav" />
     <meta
       name="description"
-      content="This is the portfolio website of Daniel Jebarson done with React and TailwindCSS"
+      content="This is the portfolio website of Nitish Yadav done with React and TailwindCSS"
     />
     <meta name="page-topic" content="Portfolio" />
     <meta name="page-type" content="Portfolio" />
